--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -55,8 +55,8 @@ video {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: #949168;
-  opacity: 0.7;
+  background-color: #f8f4f4;
+  opacity: 0.1;
   z-index: 1;
 }
 
@@ -157,7 +157,7 @@ video {
 .social-icons ul > li > a {
   display: block;
   color: white;
-  background-color: rgba(184, 37, 82, 0.8);
+  background-color: rgba(16, 126, 236, 0.8);
   border-radius: 100%;
   font-size: 2rem;
   line-height: 4rem;
@@ -195,18 +195,18 @@ video {
     width: 4rem;
   }
   .social-icons ul > li > a:hover {
-    background-color: #b82552;
+    background-color: #107eec;
   }
 }
 
 .btn-secondary {
   background-color: #949168;
-  border-color: #949168;
+  border-color: #f8f4f4;
 }
 
 .btn-secondary:active, .btn-secondary:focus, .btn-secondary:hover {
   background-color: #767453 !important;
-  border-color: #767453 !important;
+  border-color: #e4d5d5 !important;
 }
 
 .input {
