--- a/css/style.css
+++ b/css/style.css
@@ -3286,3 +3286,22 @@ a.wthree_active,.agile_quick_search1 ul.agileits_w3layouts_text li a:hover{
     background-size: cover;
     min-height: 500px;
 }
+
+.cognito > form {
+    min-width: 600px;
+}
+@media(max-width: 767px){
+    .cognito > form {
+        min-width: 300px !important;
+    }
+}
+@media(max-width: 1225px) and (min-width: 991px)  {
+    .cognito > form {
+        min-width: 300px !important;
+    }
+}
+@media(min-width: 1224px) and (max-width: 1400px)  {
+    .cognito > form {
+        min-width: 450px !important;
+    }
+}
